objects/TT_Client_Answers__c/TT_Client_Answers__c.object-meta.xml
<CustomObject>
    <label>TelosTouch Answer</label>
    <nameField>
        <label>Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TelosTouch  Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>