objects/TT_Client_Answers__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>TT_Client_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>