objects/TT_Client_Answers__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>TT_Client_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>