objects/TT_Client_Answers__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Full Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>