objects/TT_Client_Answers__c/fields/TT_Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>TT_Conversation_Id__c</fullName>
    <label>TT Conversation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>