objects/TT_Client_Answers__c/fields/TT_Template_Questions__c.field-meta.xml
<CustomField>
    <fullName>TT_Template_Questions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TT Template Questions</label>
    <referenceTo>TT_Template_Questions__c</referenceTo>
    <relationshipName>TT_Client_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>