objects/TT_Client_Answers__c/validationRules/Disable_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Disable_Edit</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() = FALSE</errorConditionFormula>
    <errorMessage>You can&apos;t modify the record.</errorMessage>
</ValidationRule>