objects/TT_Client_Answers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Answer__c</columns>
    <columns>Campaign__c</columns>
    <columns>Contact__c</columns>
    <columns>Client__c</columns>
    <columns>Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>